--- a/app/style/main.less
+++ b/app/style/main.less
@@ -34,6 +34,10 @@
 			&#questionsSlide {
 				@import './questions.less';
 			}
+			
+			&#codeSlide {
+				@import './code.less';
+			}
 		}
 	}
 	
