--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -1,2 +1,2 @@
 <div id="root">{{{content}}}</div>
-<script type="text/javascript" src="/js/client.js"></script>
+<script type="text/javascript" src="http://localhost:8080/js/client.js"></script>
