--- a/app/style/main.less
+++ b/app/style/main.less
@@ -2,55 +2,6 @@
 	margin:0;
 	padding:0;
 	text-align: center;
-	
-	color: #fff;
-	
-	.deck {
-		@import './deck.less';
-		
-		.slide {
-			@import './slide.less';
-			
-			&#introSlide {
-				@import './intro.less';
-			}
-			
-			&#problemSlide {
-				@import './problem.less';
-			}
-			
-			&#demoSlide {
-				@import './demo.less';
-			}
-			
-			&#techSlide {
-				@import './tech.less';
-			}
-			
-			&#solutionSlide {
-				@import './solution.less';
-			}
-			
-			&#questionsSlide {
-				@import './questions.less';
-			}
-			
-			&#codeSlide {
-				@import './code.less';
-			}
-		}
-	}
-	
-	.horizontal {
-		width:100%;
-		display: flex;
-		flex-direction: row;
-		justify-content: space-around;
-	}
-	
-	.nextSlideLink {
-		color: inherit;
-		text-decoration: inherit;
-	}
-	
+
+	color: #335;
 }
