adding some style to the App container component

--- a/app/shared/style/App.less
+++ b/app/shared/style/App.less
@@ -5,3 +5,19 @@
 
 	color: #335;
 }
+
+.App-container {
+  display: table;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+}
+
+.App-header {
+  height: 100px;
+}
+
+.App-content {
+  flex: 1;
+}
